--- a/app/design/maintenance/default.phtml
+++ b/app/design/maintenance/default.phtml
@@ -1,3 +1,12 @@
+<?php
+/**
+ * Maho
+ *
+ * @package    maintenance_default
+ * @copyright  Copyright (c) 2025-2026 Maho (https://mahocommerce.com)
+ * @license    https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
+ */
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
