--- a/app/design/adminhtml/default/default/layout/catalog.xml
+++ b/app/design/adminhtml/default/default/layout/catalog.xml
@@ -203,6 +203,19 @@
             <block type="adminhtml/catalog_product_edit_tab_crosssell" name="catalog.product.edit.tab.crosssell"/>
         </block>
     </adminhtml_catalog_product_crosssellgrid>
+
+    <adminhtml_catalog_product_parentproducts>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="adminhtml/catalog_product_edit_tab_parentProducts" name="catalog.product.edit.tab.parent_products"/>
+        </block>
+    </adminhtml_catalog_product_parentproducts>
+
+    <adminhtml_catalog_product_parentproductsgrid>
+        <block type="core/text_list" name="root" output="toHtml">
+            <block type="adminhtml/catalog_product_edit_tab_parentProducts" name="catalog.product.edit.tab.parent_products"/>
+        </block>
+    </adminhtml_catalog_product_parentproductsgrid>
+
 <!--
 Layout handle for simple products
 -->
